<resources>
    <string name="app_name">trip_favo</string>
    <string name="favo_fragment">おきにいり</string>
    <string name="search_fragment">ホテルをさがす</string>
    <string name="onsen">温泉:</string>
    <string name="order">並び替え:</string>
    <string name="review">レビュー順</string>
    <string name="cheap">安い順</string>
    <string name="expensive">高い順</string>
    <string name="recently">新しい順</string>
    <string name="old">古い順</string>
    <string name="search">検索</string>
    <string name="area">地域:</string>
    <string name="prefecture">都道府県:</string>
    <string name="city">市区町村:</string>
    <string name="detail">地区詳細:</string>
    <string name="review_text">レビュー:</string>
    <string name="keyword">キーワード入力</string>
    <string name="price">円〜</string>
</resources>