<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.FavoriteSearchFragment">

    <TextView
        android:id="@+id/favorite_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/search"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="16dp" />

    <SearchView
        android:id="@+id/favorite_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/favorite_search_text"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:queryHint="@string/keyword"
        android:iconifiedByDefault="false" />

    <TextView
        android:id="@+id/favorite_onsen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/favorite_search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/onsen"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/favorite_onsen_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/favorite_search"
        app:layout_constraintStart_toEndOf="@id/favorite_onsen"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:switchMinWidth="60dp"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/favorite_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/favorite_onsen"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/current_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/favorite_order"
        app:layout_constraintTop_toBottomOf="@+id/favorite_onsen"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/review"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/favo_order_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@+id/current_order"
        app:layout_constraintTop_toBottomOf="@+id/favorite_onsen" />

    <Button
        android:id="@+id/favorite_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/favorite_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:background="@color/blue"
        android:text="@string/search"
        android:textColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>