<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoriteHotelViewModel"
            type="com.kuro.trip_favo.ui.viewModel.FavoriteHotelViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bottomsheet_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/favorite_search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/favorite_search"
            android:text="@string/search"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="16dp" />

        <SearchView
            android:id="@+id/favorite_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/favorite_onsen"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:focusable="false"
            android:queryHint="@string/keyword"
            android:iconifiedByDefault="false" />

        <TextView
            android:id="@+id/favorite_onsen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/favorite_order"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="16dp"
            android:text="@string/onsen"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/favorite_onsen_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/favorite_order"
            app:layout_constraintStart_toEndOf="@id/favorite_onsen"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="30dp"
            android:switchMinWidth="60dp"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/favorite_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/favorite_search_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/order"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Spinner
            android:id="@+id/favorite_order_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/favorite_order"
            app:layout_constraintBottom_toTopOf="@+id/favorite_search_button"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="27dp"
            android:selectedItemPosition="@={favoriteHotelViewModel.selectedOrderPosition}" />

        <Button
            android:id="@+id/favorite_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:background="@color/blue"
            android:text="@string/search"
            android:textColor="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>